<resources>
    <string name="app_name">TableA</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Обьявления</string>
    <string name="ad_my_ads">Мои обьявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset_password_was_sent">Сброс пароля отправлен на Вашу почту!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш Email адрес!</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Неудалось зарегистрироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="send_verification_email_error">Неудалось отправить email для потверждения!</string>
    <string name="send_verification_done">На Вашу почту отправленна ссылка для потверждения вашего аккаунта, пожалуйста подтвердите Ваш аккаунт!</string>
    <string name="ac_sign_copy">Copyright by Richi</string>
</resources>