<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ac_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edSignEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

    <EditText
        android:id="@+id/edSingPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="text|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSignEmail"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignUpIn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="3dp"
        android:padding="13dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/sign_up_action"
        app:buttonSize="standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edSingPassword"
        app:layout_constraintTop_toBottomOf="@+id/edSingPassword"
        app:layout_constraintVertical_bias="0.431"
        app:strokeWidth="0.2dp"
        />

    <Button
        android:id="@+id/btForgetP"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btSignUpIn" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_reset_email_message"
        android:textColor="@color/color_red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvSignTitle"
        tools:visibility="gone" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Button"
        app:buttonSize="standard"
        app:layout_constraintBottom_toTopOf="@+id/btSignUpIn"
        app:layout_constraintEnd_toEndOf="@+id/edSingPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edSingPassword"
        app:layout_constraintTop_toTopOf="@+id/edSingPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ac_sign_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignUpIn"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="82dp" />

</androidx.constraintlayout.widget.ConstraintLayout>